# CardGame

./: README.md  main.py  pyproject.toml
app/: app.py  main.py
app/asset/cards/: p001.json  p002.json  z001.json  z002.json
app/core/: __init__.py  base.py  config.py  event.py  game.py  models.py
app/core/action/: action.py  action_manager.py  actions.py  operation_templates.json
app/core/engine/: __init__.py  combat.py  exception.py  game.py  player.py
app/core/entity/: __init__.py  ability.py  ability_assemble.py  card.py  field.py  hero.py  player.py  slot.py  super_block.py
app/core/event/: __init__.py  ability.py  action.py  event.py  event_assemble.py  event_manager.py  events.py  listener.py  listener_assemble.py
app/core/item/: _init__.py  card.py  end_phase.py  hero.py  item.py  item_manager.py  position.py  target.py
app/core_bak/: __init__.py  config.py
app/core_bak/engine/: exception.py  game.py  payload_decoder.py
app/core_bak/entity/: __init__.py  ability.py  ability_assemble.py  card.py  field.py  hero.py  player.py  slot.py  state.py  super_block.py
app/core_bak/event/: __init__.py  action.py  event.py  event_assemble.py  event_manager.py  listener.py  listener_assemble.py
app/game/: base.py  event.py  game.py  models.py
app/templates/: board.css  board.html  board.js
src/Game/: main.py
