[build-system]
# 定义构建系统，这里使用 setuptools
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cardgame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]