[build-system]
# 定义构建系统，这里使用 setuptools
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cardgame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "flask>=3.1.2",
    "unicorn>=2.1.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
